--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
             <h1 class="display-4">About COMP125</h1>
             <p class="lead">This is a sample about page for COMP125</p>
             <hr class="my-4">
-            <p>We will be adding to this page throughout the semester</p>
+            <p id="paragraph"></p>
           </div>
     
     <!-- JavaScript Section -->
